# news_parser

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
News/: admin.py  cron.py  models.py  news_sites.py  parser.py  urls.py  views.py
News/management/commands/: bot.py  parser.py
News/migrations/: 0001_initial.py  0002_auto_20210408_1517.py
News/static/news/: style.css
News/templates/news/: article.html  base.html  index.html  navbar.html  paginator_template.html
News/tests/: functional_test.py  test_frontend.py  test_models.py  test_parser.py  test_urls.py  test_views.py
SE_Project/: asgi.py  settings.py  urls.py  wsgi.py
contact/: admin.py  forms.py  models.py
news/: admin.py  models.py  news_sites.py  urls.py  views.py
news/management/commands/: bot.py  parser.py  send_msg.py  subscription.py
news/migrations/: 0001_initial.py  0002_telegrapharticle.py  0003_subscriber.py
news/static/news/: style.css
news/templates/news/: article.html  base.html  index.html  navbar.html  paginator_template.html  subscribe.html
news/tests/: test_frontend.py  test_views.py
news_parser/: asgi.py  settings.py  urls.py  wsgi.py
